2003-07-29  Dan Winship  <danw@ximian.com>

	* e-msg-composer-attachment-bar.c (pixbuf_for_mime_type): Gone.
	(update): Use e_icon_for_mime_type instead.

	* bad-icon.xpm: Remove this. It was only used by e-icon-list,
	which is no longer there.

	* composer-marshal.list: Likewise

	* Makefile.am: Remove bad-icon.xpm and composer-marshal refs.
	(INCLUDES): remove EVOLUTION_IMAGESDIR define

2003-07-28  Antonio Xu <antonio.xu@sun.com>

       * e-msg-composer-attachment-bar.c  (update): add
       gdk_pixbuf_loader_close to close pix buffer loading.  [#45908]

2003-07-17  Michel DÃ¤nzer  <michel@daenzer.net>

	* e-msg-composer.c (autosave_manager_query_load_orphans): Set
	default answer of dialog to 'yes' to try and prevent autosaved
	messages from getting lost accidentally.

2003-07-17  Maxx Cao  <maxx.cao@sun.com>

	** For bug #46013

	* e-msg-composer-hdrs.c (header_new_recipient): To/cc/bcc buttons
	made focusable.

2003-07-17  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c (popup_menu_event): Fix some
	compiler warnings introduced by the previous commit.

2002-07-14  Maxx Cao  <maxx.cao@sun.com>

	** For bug #45826

	* e-msg-composer-attachment-bar.c (class_init): connect the 
	"popup_menu" signal, so that S-F10 keybinding will work.
	(popup_menu_event): funcion added to handle "popup_menu" (S-F10 key).
	(popup_menu_placement_callback): function added to place the popup 
	menu to the center of attachment icon, in case it is activated by 
	keyboard.

2003-06-25  Antonio Xu  <antonio.xu@sun.com>

	* e-msg-composer.c (handle_mailto): Change file url to absolute
	path. Fixes bug #44065.

2003-07-01  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (autosave_load_draft): Connect to the
	save-draft signal too. Fixes bug #45531.

2003-06-27  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (build_message): Set the rawtext bits for the
	'plain' and 'html' data wrappers to FALSE.

2003-06-19  Larry Ewing  <lewing@ximian.com>
