@@ -1,3 +1,9 @@
+2003-07-31  Antonio Xu  <antonio.xu@sun.com>
+
+	* e-msg-composer.c (drag_data_received): add the drop type of
+	mozilla browser link to make composer support to handle mozilla
+	DnD data.  [#47131]
+
 2003-07-29  Dan Winship  <danw@ximian.com>
 
 	* e-msg-composer-attachment-bar.c (pixbuf_for_mime_type): Gone.
